--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,6 +40,7 @@ android {
     dependencies {
         implementation "com.pusher:pusher-java-client:2.4.0"
         implementation 'com.google.code.gson:gson:2.8.9'
+        implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     }
 }
 
